--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,24 @@
     background-position: 0% 50%;
   }
 }
+
+.loading-div {
+  width: 240px;
+  height: 240px;
+  background-color: #00000073;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.background-transparent {
+  background-color: transparent !important;
+}
+.please-wait {
+  display: flex;
+  justify-content: center !important;
+}
