--- a/src/login.css
+++ b/src/login.css
@@ -26,3 +26,15 @@
 .site-form-item-icon {
   color: rgba(0, 0, 0, 0.25);
 }
+
+.content {
+  position: absolute;
+  font-size: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
