--- a/src/login.css
+++ b/src/login.css
@@ -38,3 +38,14 @@
   align-items: center;
   color: white;
 }
+
+.login-header-button {
+  min-width: 170px;
+  border: 1px solid #28589a;
+  border-radius: 4px;
+  height: 30px !important;
+  color: #28589a;
+  font-weight: bold;
+  background-color: #fff;
+  z-index: 2;
+}
