--- a/src/App.css
+++ b/src/App.css
@@ -381,3 +381,188 @@
   padding: 4px 11px;
   margin-right: 100px;
 }
+
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.login_background {
+  background-image: url("Images/bg-sign-in-basic.jpeg");
+  background-repeat: no-repeat;
+
+  background-size: cover;
+
+  height: 100vh;
+  width: 100%;
+
+  /* position: relative; */
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form-group {
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+
+.form-control {
+  height: 2.5rem;
+}
+
+.form-control:focus + .floating-label,
+.form-control:not(:placeholder-shown) + .floating-label {
+  font-size: 15px;
+  transform: translateY(-1.5rem);
+}
+
+.floating-label {
+  position: absolute;
+  pointer-events: none;
+  left: 1rem;
+  top: 1rem;
+  top: 0.5rem;
+  transition: 0.2s ease all;
+}
+.form-control:focus {
+  outline: none;
+  box-shadow: none;
+  border-color: #0b5ed7;
+}
+
+.mainlayout {
+  margin: 20px;
+  overflow: initial;
+  min-height: 95vh;
+  padding-top: 0px;
+  @media (min-width: 375px) and (max-width: 576px) {
+    margin-bottom: 20vw !important;
+  }
+  @media (min-width: 576px) and (max-width: 768px) {
+    margin-bottom: 10vw !important;
+  }
+  @media (min-width: 768px) and (max-width: 1200px) {
+    margin-bottom: 8vw !important;
+  }
+}
+.siderVersion {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  position: absolute;
+  top: 85vh;
+}
+:where(.css-dev-only-do-not-override-1ae8k9u).ant-layout-header .ant-menu {
+  line-height: inherit;
+  background-color: white;
+}
+
+.add-cancel {
+  background-color: #94a3b8;
+  color: #fff;
+  border-radius: 5px;
+  margin-right: 10px;
+  height: 30px;
+
+  &:hover {
+    background-color: #94a3b8;
+    color: #fff;
+    height: 30px;
+  }
+}
+
+.sav-btn {
+  background: #28589a;
+  color: white;
+  border-radius: 5px;
+  height: 30px;
+}
+
+.add-row {
+  justify-content: right;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.buttonBorder-add {
+  border-color: purple;
+  border: 0;
+  border-radius: 5px;
+  color: purple;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: color 150ms ease-in-out;
+  
+  &:after {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 100%;
+    background: purple;
+    z-index: -1;
+    color: white;
+    transition: width 150ms ease-in-out;
+  }
+  
+  &:hover {
+    color: #fff;
+    &:after {
+      width: 110%;
+    }
+  }
+}
+
+/* Sidebar.module.css */
+.sidebar {
+  height: 97vh;
+  margin: 15px;
+  border-radius: 20px;
+  width: 13vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+
